feat: runtime-dom/patchProp

--- a/examples/4.computed.html
+++ b/examples/4.computed.html
@@ -36,6 +36,10 @@
 
         App.render()
 
+        // app.appendChild(document.createTextNode('text'))
+        // app.nodeValue = 111
+        app.className = ''
+
 
     </script>
 </body>
