--- a/examples/vue.template.html
+++ b/examples/vue.template.html
@@ -11,39 +11,44 @@
 <body>
     <div id="app">
         <div>
-            <span>{{state.name}}</span>
+            <span>{{versions}}</span>
+            <!-- <span>{{state.name}}</span>
             <span>{{state.versions}}</span>
-            <span>{{computedState}}</span>
+            <span>{{computedState}}</span> -->
         </div>
-        <button @click="fn">Click</button>
+        <!-- <button @click="fn">Click</button> -->
     </div>
     <script src="./vue.dev.js"></script>
     <script>
-        const { createApp, reactive, h, computed, onMounted } = Vue
+        const { createApp, reactive, h, computed, onMounted, toRefs } = Vue
 
         const App = {
             setup() {
                 const state = reactive({ name: 'Hello Vue', versions: [1.0, 2.0, 3.0] })
 
-                const computedState = computed(() => {
-                    return state.versions.map(v => v * 2)
-                })
+                // const computedState = computed(() => {
+                //     return state.versions.map(v => v * 2)
+                // })
 
-                const fn = () => {
-                    state.name = 'Hello World'
-                    state.versions.push(4.0)
-                }
+                const { versions } = toRefs(state)
+
+                console.log(versions)
+
+                // const fn = () => {
+                //     state.name = 'Hello World'
+                //     state.versions.push(4.0)
+                // }
 
                 onMounted(() => {
                     setTimeout(() => {
-                        state.versions.push(5.0)
+                        state.versions = []
                     }, 3000)
                 })
 
                 return {
-                    state,
-                    fn,
-                    computedState
+                    versions,
+                    // fn,
+                    // computedState
                 }
             }
         }
