feat: runtime-core/setup

--- a/examples/5.createApp.html
+++ b/examples/5.createApp.html
@@ -23,7 +23,7 @@
                 }
             },
             render(proxy) {
-                console.log('render', proxy.a, proxy.b, proxy.style.c)
+                console.log('render', proxy.$a, proxy.b, proxy.style.c)
             }
         }
 
