--- a/examples/5.createApp.html
+++ b/examples/5.createApp.html
@@ -17,17 +17,16 @@
 
         const App = {
             setup(props, ctx) {
-                console.log('setup', props, ctx)
                 return {
                     a: 1
                 }
             },
             render(proxy) {
-                console.log('render', proxy.$a, proxy.b, proxy.style.c)
+                console.log('render')
             }
         }
 
-        createApp(App, { style: { c: 3 } }).mount(app)
+        createApp(App, { style: { color: '#1890ff' } }).mount(app)
     </script>
 </body>
 
